[gd_scene load_steps=11 format=3 uid="uid://dmcb5d8o0ctte"]

[ext_resource type="Script" path="res://script/UI/card_detail.gd" id="1_2gf6e"]
[ext_resource type="Texture2D" uid="uid://2bun5eec1hjm" path="res://img/piece/standerd/white.png" id="2_7yvi8"]
[ext_resource type="PackedScene" uid="uid://dro1g6xf0nis0" path="res://scenes/UI/state_display.tscn" id="3_m00yr"]
[ext_resource type="Texture2D" uid="uid://bi8utgqs2qcd5" path="res://img/UI/heart.png" id="4_vh60p"]
[ext_resource type="Texture2D" uid="uid://dlt2ub7m3rl5x" path="res://img/UI/sword.png" id="5_66hrm"]
[ext_resource type="Texture2D" uid="uid://bfggacbdcsml5" path="res://img/UI/target.png" id="6_hstqh"]
[ext_resource type="Texture2D" uid="uid://hsilqv8ksxq5" path="res://img/UI/shield.png" id="7_d0clw"]
[ext_resource type="PackedScene" uid="uid://bx20ali1hrkoi" path="res://scenes/UI/buff_list.tscn" id="8_kwtp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_penoc"]
bg_color = Color(0.0383972, 0.0383972, 0.0383971, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjtl6"]
bg_color = Color(0.706727, 0.184233, 0.212433, 1)

[node name="card_detail" type="Control"]
custom_minimum_size = Vector2(240, 300)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2gf6e")

[node name="true_background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 300.0
mouse_filter = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 240.0
offset_bottom = 300.0
mouse_filter = 2
color = Color(0.556953, 0.556953, 0.556953, 1)

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 235.0
offset_bottom = 295.0
mouse_filter = 2
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="card_icon" type="Sprite2D" parent="."]
position = Vector2(119, 80)
texture = ExtResource("2_7yvi8")
hframes = 3
vframes = 3

[node name="lbl_card_name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 40.0
mouse_filter = 2
bbcode_enabled = true
text = "Name"

[node name="lbl_card_description" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 175.0
offset_right = 230.0
offset_bottom = 275.0
mouse_filter = 2
bbcode_enabled = true
text = "description"

[node name="lbl_hint" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 255.0
offset_right = 240.0
offset_bottom = 295.0
bbcode_enabled = true

[node name="States" type="GridContainer" parent="."]
custom_minimum_size = Vector2(180, 20)
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 220.0
offset_bottom = 160.0
mouse_filter = 2
theme_override_constants/h_separation = 10
columns = 3

[node name="max_health_state" parent="States" instance=ExtResource("3_m00yr")]
visible = false
layout_mode = 2
icon_texture = ExtResource("4_vh60p")

[node name="attack_state" parent="States" instance=ExtResource("3_m00yr")]
visible = false
layout_mode = 2
icon_texture = ExtResource("5_66hrm")

[node name="pattern_state" parent="States" instance=ExtResource("3_m00yr")]
visible = false
layout_mode = 2
icon_mode = true
icon_texture = ExtResource("6_hstqh")

[node name="HealthStates" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 45.0
offset_top = 110.0
offset_right = 195.0
offset_bottom = 140.0
mouse_filter = 2

[node name="shield_effect" type="ColorRect" parent="HealthStates"]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 137.0
offset_bottom = 22.0
color = Color(0.584314, 0.415686, 0.235294, 1)

[node name="health_bar" type="ProgressBar" parent="HealthStates"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 135.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_penoc")
theme_override_styles/fill = SubResource("StyleBoxFlat_xjtl6")
value = 60.0
show_percentage = false

[node name="lbl_health" type="Label" parent="HealthStates"]
layout_mode = 0
offset_left = 15.0
offset_top = 8.0
offset_right = 135.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 10
text = "10 / 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="shield_icon" type="TextureRect" parent="HealthStates"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 27.0
offset_bottom = 27.0
texture = ExtResource("7_d0clw")

[node name="lbl_shield" type="Label" parent="HealthStates"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 27.0
offset_bottom = 27.0
theme_override_font_sizes/font_size = 12
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buffs" parent="." instance=ExtResource("8_kwtp3")]
offset_left = 5.0
offset_top = 276.0
offset_right = 235.0
offset_bottom = 295.0
columns = 12
icon_count_limit = 10

[node name="shader" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.313726)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
